<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpu_imgproc</name>
  <version>0.1.0</version>
  <description>GPU ROS Topic Image Processing</description>
  <maintainer email="contact@map4.jp">MAP IV</maintainer>

  <license>Apache 2</license>
  <author>Tier IV</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <!-- <depend>rclcpp_components</depend> -->
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>libturbojpeg</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>